[tool.poetry]
authors = ["Jon Connell <python@figsandfudge.com>"]
classifiers = [
  "Topic :: Office/Business :: Financial :: Spreadsheet",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
description = "Read and write Apple Numbers spreadsheets"
documentation = "https://github.com/masaccio/numbers-parser/blob/main/README.md"
license = "MIT"
name = "numbers-parser"
packages = [{include = "numbers_parser", from = "src"}]
readme = "README.md"
repository = "https://github.com/masaccio/numbers-parser"
version = "4.14.1"

[tool.poetry.scripts]
cat-numbers = "numbers_parser._cat_numbers:main"
unpack-numbers = "numbers_parser._unpack_numbers:main"
csv2numbers = "numbers_parser._csv2numbers:main"

[tool.poetry.dependencies]
compact-json = "^1.1.3"
protobuf = "*"
python = ">=3.9,<4.0"
python-snappy = "^0.7"
sigfig = "^1.3.3"
setuptools = ">=70.0.0"
importlib-resources = ">=6.1"
enum-tools = ">=0.11"
python-dateutil = "^2.9.0.post0"

[tool.poetry.group.dev.dependencies]
black = "*"
gprof2dot = "^2022.7.29"
line-profiler = "^4.0.3"
mock = ">=5.1.0"
psutil = ">=5.9"
pytest = ">=7.2.0"
pytest-check = ">=1.0"
pytest-console-scripts = "^1.3.1"
pytest-cov = ">=4.0,>=5.0"
pytest-xdist = "^3.3.1"
ruff = "*"
tox = "^4.11.4"
python-magic = ">=0.4"
tqdm = ">=4.66"
colorama = "^0.4.6"
roman = "^4.2"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = ">= 7.3"
enum-tools = ">=0.11"
sphinx-toolbox = ">=3.5"
sphinx-nefertiti = ">=0.3.3"
sphinx-markdown-builder = ">=0.6"
sphinx-copybutton = ">=0.5"

[tool.poetry.group.bootstrap]
optional = true

[tool.poetry.group.bootstrap.dependencies]
pyobjc-core = ">=10.2"
pyobjc-framework-Cocoa = ">=10.2"
py2app = ">=0.28"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.coverage.run]
branch = true
omit = ["src/numbers_parser/generated/*.py"]

[tool.coverage.html]
directory = "coverage_html_report"
show_contexts = true

[tool.pytest.ini_options]
addopts = "--cov=src/numbers_parser --cov-report=html --cov-report=term-missing:skip-covered --cov-context=test"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py39, py310, py311, py312, py313
[testenv]
deps =
  pytest
  pytest-check
  pytest-console-scripts
  pytest-cov
  pytest-xdist
  python-magic
  psutil
commands =
  pytest tests/ --import-mode importlib -n logical --no-cov
"""

[tool.isort]
profile = "black"

[tool.ruff]
exclude = [
  # Machine-generated files
  ".bootstrap/*",
  ".tox/*",
  ".vscode/*",
  "src/numbers_parser/generated/*",
  # Third-party files not to lint
  "src/debug/lldbutil.py", # Tox
]
fix = true
ignore = [
  "PLR2004", # Allow constant values
]
line-length = 100
select = [
  # Pyflakes including bugbears
  "F",
  "B", # Pycodestyle
  "E",
  "W", # isort
  "I", # PEP naming
  "N", # pyupgrade
  "UP", # Pylama
  "PL",
]
src = ["src", "tests"]
target-version = "py38"
unfixable = [
  "ERA", # do not autoremove commented out code
]

[tool.ruff.pylint]
max-statements = 100
max-branches = 20

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
"src/bootstrap/**" = ["PLR2004"]
"tests/**" = ["PLR2004", "S101", "D103", "ANN201", "ANN001"]