# build settings
[metadata]
name = numbers-parser
version = attr: numbers_parser._version.__version__
author = Jon Connell
author_email = python@figsandfudge.com
license = MIT
description = Package to read data from Apple Numbers spreadsheets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/masaccio/numbers-parser
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
python_requires = >= 3.6
test_suite = tests
package_dir=
    =src
packages=find:
install_requires =
    protobuf
    python-snappy
    PyYAML
tests_require = 
    pytest
    pytest-console-scripts
    pytest-check

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    cat-numbers = numbers_parser._cat_numbers:main
    unpack-numbers = numbers_parser._unpack_numbers:main


# pytest settings
[tool:pytest]
minversion = 5.4
addopts = -ra -s
testpaths = tests
python_files = *.py
script_launch_mode = subprocess


# tox settings
[tox:tox]
envlist = py38, py39

[testenv]
deps =
    PyYAML
    protobuf
    pytest
    pytest-check
    pytest-console-scripts
    python-snappy
commands =
    pytest


# linter settings
[pylama]
format = pylint
skip = .tox/*,tests/*.py,src/numbers_parser/generated/*

[pylama:pyflakes]
builtins = _

[pylama:pycodestyle]
max_line_length = 100
ignore=E203, E265, W503

[pylama:pylint]
max_line_length = 100


# coverage settings
[coverage:run]
omit = src/numbers_parser/generated/*.py
branch = True

[coverage:html]
directory = coverage_html_report


# docs settings
[build_sphinx]
source-dir = doc/
build-dir = doc/build/

